--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-notifications": "^0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
+    "expo-web-browser": "~12.1.1",
     "express": "^4.18.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
