--- a/package.json
+++ b/package.json
@@ -7,51 +7,48 @@
     "start": "expo start",
     "start:api": "ts-node api/server.ts",
     "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios": "expo start -c --ios",
     "web": "expo start --web",
     "deploy": "gh-pages -d web-build",
     "predeploy": "expo export:web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "csv-parser": "^3.0.0",
-    "expo": "~48.0.11",
-    "expo-device": "^5.2.1",
-    "expo-notifications": "^0.18.1",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
-    "expo-web-browser": "~12.1.1",
+    "expo": "^51.0.21",
+    "expo-device": "~6.0.2",
+    "expo-notifications": "~0.28.10",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.20",
+    "expo-web-browser": "~13.0.3",
     "express": "^4.18.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.7",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-pager-view": "^6.2.0",
-    "react-native-paper": "^5.7.0",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
+    "react-native-paper": "^5.12.3",
     "react-native-paper-dates": "^0.18.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-paper-tabs": "^0.7.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.18.10",
+    "react-native-web": "~0.19.10",
     "react-navigation-header-buttons": "^10.0.0",
     "socket.io": "^4.6.2",
     "socket.io-react-hook": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "^0.72.0",
+    "@babel/core": "^7.24.0",
     "gh-pages": "^5.0.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
